--- a/CheckOutData.ipynb
+++ b/CheckOutData.ipynb
@@ -67082,11 +67082,12 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn import model_selection, metrics\n",
     "import json\n",
+    "\n",
     "max_words = 240 \n",
     "nb_classes =     \n",
     "batch_size = 64 \n",
     "nb_epoch = 20\n",
-    "# MLP 모델 생성하기 --- (※1)\n",
+    "\n",
     "def build_model():\n",
     "    model = Sequential()\n",
     "    model.add(Dense(512, input_shape=(max_words,)))\n",
@@ -67098,12 +67099,12 @@
     "        optimizer='adam',\n",
     "        metrics=['accuracy'])\n",
     "    return model\n",
-    "# 데이터 읽어 들이기--- (※2)\n",
+    "\n",
     "data = json.load(open(\"./newstext/data-mini.json\")) \n",
-    "#data = json.load(open(\"./newstext/data.json\"))\n",
-    "X = data[\"X\"] # 텍스트를 나타내는 데이터\n",
-    "Y = data[\"Y\"] # 카테고리 데이터\n",
-    "# 학습하기 --- (※3)\n",
+    "\n",
+    "X = data[\"X\"] \n",
+    "Y = data[\"Y\"] \n",
+    "\n",
     "X_train, X_test, Y_train, Y_test = train_test_split(X, Y)\n",
     "Y_train = np_utils.to_categorical(Y_train, nb_classes)\n",
     "print(len(X_train),len(Y_train))\n",
@@ -67112,7 +67113,7 @@
     "    nb_epoch=nb_epoch, \n",
     "    batch_size=batch_size)\n",
     "model.fit(X_train, Y_train)\n",
-    "# 예측하기 --- (※4)\n",
+    "\n",
     "y = model.predict(X_test)\n",
     "ac_score = metrics.accuracy_score(Y_test, y)\n",
     "cl_report = metrics.classification_report(Y_test, y)\n",
